# riscvsim

./: .gitignore  CMakeLists.txt
doc/: InstructionType-1.md
include/: instruction.h
source/: main.cpp
unittest/: test_glog.cpp
